--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-paginate": "^7.1.1",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-thunk": "^2.1.0",
     "axios": "^0.26.1",
     "rc-pagination": "^3.1.15",
     "react": "^17.0.2",
