--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-paginate": "^7.1.1",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-form": "^8.3.5",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.26.1",
     "rc-pagination": "^3.1.15",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-form": "^8.3.8",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
