--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-paginate": "^7.1.1",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-select": "^5.0.1",
     "@types/redux-form": "^8.3.5",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.26.1",
@@ -24,6 +25,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-form": "^8.3.8",
+    "reselect": "^4.1.7",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
