--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/redux-form": "^8.3.5",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.26.1",
+    "formik": "^2.2.9",
     "rc-pagination": "^3.1.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
